testing/tests/ui/char_literal.stderr
error: invalid character
 --> testing/templates/char-literals/char-literal-1.txt:1:12
  |
       1 | {% let s = '\a' %}
         |            ^ close to this token
         |
 --> tests/ui/char_literal.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid character
 --> testing/templates/char-literals/char-literal-2.txt:1:12
  |
       1 | {% let s = '\x' %}
         |            ^ close to this token
         |
 --> tests/ui/char_literal.rs:7:10
  |
7 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid character
 --> testing/templates/char-literals/char-literal-3.txt:1:12
  |
       1 | {% let s = '\x1' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:11:10
   |
11 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must be a character in the range [\x00-\x7f]
 --> testing/templates/char-literals/char-literal-4.txt:1:12
  |
       1 | {% let s = '\x80' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:15:10
   |
15 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid character
 --> testing/templates/char-literals/char-literal-5.txt:1:12
  |
       1 | {% let s = '\u' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:19:10
   |
19 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid character
 --> testing/templates/char-literals/char-literal-6.txt:1:12
  |
       1 | {% let s = '\u{}' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:23:10
   |
23 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unicode escape must be at most 10FFFF
 --> testing/templates/char-literals/char-literal-7.txt:1:12
  |
       1 | {% let s = '\u{110000}' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:27:10
   |
27 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid character
 --> <source attribute>:1:12
  |
       1 | {% let s = 'aaa' %}
         |            ^ close to this token
         |
  --> tests/ui/char_literal.rs:31:10
   |
31 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
